--- a/blog.Rmd
+++ b/blog.Rmd
@@ -22,7 +22,7 @@ For typical image file formats such as JPEG2000, only complete files can be quer
 blocks or pixels at lower resolution are needed. Assuming a common size of hundreds of megabytes per image file, this leads to a lot of unneeded data transfer if we work for smaller regions and/or at lower resolution. 
 
 Two recent developments that address these issues are the [SpatioTemporal Asset Catalog (STAC)](https://stacspec.org) and the [Cloud Optimized GeoTIFF (COG)](https://www.cogeo.org) file format. This blog post briefly introduces STAC and COGs and presents ongoing developments that make it easier to analyse Earth observation data on cloud platforms using R. 
-We use a small machine on Amazon Web Services (AWS) and the open [Sentinel-2 COG catalog](https://registry.opendata.aws/sentinel-2-l2a-cogs) containing Level-2A (surface reflectance) imagery from the Sentinel-2 satellites in a few examples by combining the R packages `rstac` and `gdalcubes`. (TODO: and stars??)
+We use a small machine on Amazon Web Services (AWS) and the open [Sentinel-2 COG catalog](https://registry.opendata.aws/sentinel-2-l2a-cogs) containing Level-2A (surface reflectance) imagery from the Sentinel-2 satellites in a few examples by combining the R packages `rstac` and `gdalcubes`.
 
 
 # SpatioTemporal Asset Catalog (STAC)
@@ -36,7 +36,7 @@ STAC is a set of four complimentary specifications:
 * The **Catalog** specification allows to group Collections and Items by various aspects so that they are easier to browse through.
 * **STAC API** is the last specification in this list, which is a superset of [OGC API - Features](https://www.ogc.org/standards/ogcapi-features) and aligns with their extensions as well.
 
-The ecosystem of STAC software and catalogs is growing. [STAC Index](https://stacindex.org/) gives an overview over [STAC catalogs and APIs](https://stacindex.org/catalogs). The [list of software](https://stacindex.org/ecosystem) unfortunately doesn't contain a lot of [R-based implementations](https://stacindex.org/ecosystem?language=R) yet.
+The ecosystem of STAC software and catalogs is growing. [STAC Index](https://stacindex.org/) gives an overview over [STAC catalogs and APIs](https://stacindex.org/catalogs). The [list of software](https://stacindex.org/ecosystem) with [R-based implementations](https://stacindex.org/ecosystem?language=R) is so far limited to the `rstac` CRAN package.
 
 A number of interesting talks about cloud native geospatial with strong focus on STAC can be found in the YouTube playlist of the [Cloud Native Geospatial Outreach Day 2020](https://www.youtube.com/playlist?list=PL3QzFgBMGnbQWbW-V09AzSfCbnf6Q87Rq).
 
@@ -45,8 +45,6 @@ A number of interesting talks about cloud native geospatial with strong focus on
 COGs can be seen as special GeoTIFF files where image data is stored block-wise (tiled) and the order of metadata entries and 
 pixel data on full resolution and optional overview images follows a specific structure. 
 More details can be found on the [COG website](https://www.cogeo.org/) and the [GDAL COG driver documentation](https://gdal.org/drivers/raster/cog.html). If we request a block of pixels, COGs allow to automatically find out which bytes of the file must be read and hence HTTP GET range requests become possible. The availability of overview images within a COG is essential to allow fast (on-the-fly) analysis on low resolution (as we know from [Google Earth Engine](https://earthengine.google.com/), where only pixels that are actually displayed on the screen are computed). Fortunately, [GDAL](https://gdal.org/) not only supports reading and writing COGs but also includes [virtual file systems](https://gdal.org/user/virtual_file_systems.html) to access files over HTTP and from object storage of cloud providers including AWS S3 and Google Cloud Storage. 
-
-
 
 
 # Launching an EC2 instance on AWS
@@ -70,7 +68,7 @@ sudo apt update && sudo apt install r-base
 If you prefer to use RStudio, it is also straightforward to install RStudio Server and add a security rule to make it accessible on port 8787 in the AWS management console. Afterwards, we can install quite a few R packages:
 
 ```{r, eval = FALSE}
-install.packages(c("sf","stars","magick","rmarkdown","ncdf4","Rcpp","jsonlite","RcppProgress", "rstac", "tmap"))
+install.packages(c("sf", "stars", "magick", "rmarkdown", "ncdf4", "Rcpp", "jsonlite", "RcppProgress", "rstac", "tmap"))
 ```
 
 To avoid these step when launching another instance, we might collect everything in a Docker image and use additional services of 
@@ -289,7 +287,6 @@ nclus = 5
 
 ```
 
-
 or pixel-wise time series modelling; here we map the autoregression
 coefficient of an AR(1) model fitted to the NDVI time series,
 along with its standard error:
@@ -304,24 +301,13 @@ plot(res)
 ```
 
 
-
--> Further stars examples? 
-
-
-
-
-
-
-
-
 # Summary
 
-
-With only a few lines of code, the combination of STAC, COGs, and data cubes allows to access and apply R functions on satellite imagery available on AWS. Even with a very small machine instance type, we could do some experiments for smaller areas of interest. Most of this is only possible because GDAL can efficiently read and write COGs even on cloud storage.
+With only a few lines of code, the combination of STAC, COGs, and data cubes allows to access and apply R functions on satellite imagery available on AWS. Even with a very small machine instance type, we could do some experiments for smaller areas of interest. Most of this is possible because GDAL efficiently reads and writes COGs, even on cloud storage.
 
 However, although STAC is gaining a lot of popularity these days, not all of the available catalogs point to individual images
-and some catalogs simply provide original image files but no COGs, which may slow down the processing. 
-For a good reason, STAC API endpoints contain request limits on the number of returned features. When requesting 
+and some catalogs simply provide original image files but no COGs, which may slow down processing. 
+For a good reason, STAC API endpoints have request limits on the number of returned features. When requesting 
 longer time series or larger areas, these limits are quickly reached and it is up to the user to subdivide queries. 
 Another useful feature for STAC API would be server-side filtering of features by properties. In the examples, responses contained 
 all images, which we needed to filter by cloud coverage afterwards.
