--- a/blog.Rmd
+++ b/blog.Rmd
@@ -312,4 +312,4 @@ longer time series or larger areas, these limits are quickly reached and it is u
 Another useful feature for STAC API would be server-side filtering of features by properties. In the examples, responses contained 
 all images, which we needed to filter by cloud coverage afterwards.
 
-The performed analyses have been rather simple but running more complex analyses is straightforward. In our examples, we used a rather modest EC2 instance (t3.large: 2 CPU's, 8 Gb RAM, I/O 5 Gigabit, 0.0832 USD per hour or 61 USD per month, + disk storage). Executing this R markdown document on this instance  took around 7 minutes.  Although there are very powerful instance types (e.g. with 96 CPU cores, 768 GB main memory), analysis on very large scale might work better by running many instances at the same time. Cloud platforms of course include services to do this, and distributing the work outlined above over many instances involves additional considerations. 
+The performed analyses have been rather simple but running more complex analyses is straightforward. In our examples, we used a rather modest EC2 instance (`t3.large`: 2 CPU's, 8 Gb RAM, I/O 5 Gigabit, 0.0832 USD per hour or 61 USD per month, + disk storage). Executing this R markdown document on this instance  took around 7 minutes.  Although there are very powerful instance types (e.g. with 96 CPU cores, 768 GB main memory), analysis on very large scale might work better by running many instances in parallel. Cloud platforms of course include services to do this, and distributing the work outlined above over many instances involves additional considerations. 
