update STAC cloud filter

--- a/blog.Rmd
+++ b/blog.Rmd
@@ -281,11 +281,6 @@ tm_basemap("Esri.WorldImagery") + tm_shape(difference) + tm_raster(palette = col
 With only a few lines of code, the combination of STAC, COGs, and data cubes allows to access and apply R functions on satellite imagery available on AWS. Even with a very small machine instance type, we could do some experiments for smaller areas of interest. Most of this is only possible because GDAL can efficiently read and write COGs even on cloud storage.
 
 However, although STAC is gaining a lot of popularity these days, not all of the available catalogs point to individual images
-and some catalogs simply provide original image files but no COGs, which may slow down the processing. 
-For a good reason, STAC API endpoints contain request limits on the number of returned features. When requesting 
-longer time series or larger areas, these limits are quickly reached and it is up to the user to subdivide queries.
+and some catalogs simply provide original image files but no COGs, which may slow down the processing. Furthermore the `rstac` package at the moment cannot work with static STAC catalogs (without API service). For a good reason, STAC API endpoints contain request limits on the number of returned features. When requesting longer time series or larger areas, these limits are quickly reached and it is up to the user to subdivide queries.
 
-Another useful feature for STAC API would be server-side filtering of features by properties. In the examples, responses contained 
-all images, which we needed to filter by cloud coverage afterwards.
-
-The performed analyses have been rather simple but running more complex analyses is straightforward. In our examples, we used a rather modest EC2 instance (t3.large: 2 CPU's, 8 Gb RAM, I/O 5 Gigabit, 0.0832 USD per hour or 61 USD per month, + disk storage). Executing this R markdown document on this instance  took around 7 minutes.  Although there are very powerful instance types (e.g. with 96 CPU cores, 768 GB main memory), analysis on very large scale might work better by running many instances at the same time. Cloud platforms of course include services to do this, and distributing the work outlined above over many instances involves additional considerations. 
+The performed analyses have been rather simple but running more complex analyses is straightforward. In our examples, we used a rather modest EC2 instance (t3.large: 2 CPU's, 8 Gb RAM, I/O 5 Gigabit, 0.0832 USD per hour or 61 USD per month, + disk storage). Executing this R markdown document on this instance took around 7 minutes.  Although there are very powerful instance types (e.g. with 96 CPU cores, 768 GB main memory), analysis on very large scale might work better by running many instances at the same time. Cloud platforms of course include services to do this, and distributing the work outlined above over many instances involves additional considerations. 
